--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -39,7 +39,7 @@ body {
 
 .header input:hover{
   transform: scale(1.1);
-  transition: transform0.3 ease ;
+  transition: transform 0.2s ease ;
 
 }
 
