--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
+
 }
 
 .header {
@@ -38,8 +39,8 @@ body {
 }
 
 .header input:hover{
-  transform: scale(1.1);
-  transition: transform 0.2s ease ;
+  transition: transform 0.4s ease;
+  transform: scale(1.02);
 
 }
 
@@ -83,6 +84,21 @@ body {
   transform: scale(1.1);
   transition: transform 0.3s ease;
   background-color: #333;
+}
+.btn{
+  width: 120px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #1E90FF;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: -20px;
+}
+.btn:hover{
+  background-color: #1C86EE;
+  transform: scale(1.05);
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
 .img4 img {
   width: 45px;
@@ -173,4 +189,150 @@ body {
 .card:hover {
   transform: translateY(-5px);
   background-color: #333;
+}
+.login-container {
+  background-color: white;
+  width: 400px;
+  height: 350px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex; 
+  flex-direction: column; 
+  gap: 10px;
+  position: absolute;     
+  top: 50%;               
+  left: 50%;              
+  transform: translate(-50%, -50%);
+  margin-top: 50px;
+}
+
+
+.login-container h2 {
+  color: black;
+  margin-bottom: 10px;
+}
+.login-container input {
+  width: 300px;
+  height: 40px;
+  border-radius: 20px;
+  padding-left: 10px;
+  background-color:#E0E0E0;
+  color: black;
+  border: none;
+}
+.login-container button{
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #1E90FF;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.login-container button:hover{
+  background-color: #1C86EE;
+  transform: scale(1.05);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+.divider{
+  top:0;
+  display: flex; 
+  flex-direction: column; 
+  color:black;
+  align-items: center;
+
+}
+.login-container2{
+  background-color: white;
+  width: 400px;
+  height: 350px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex; 
+  flex-direction: column; 
+  gap: 10px;
+  position: absolute;     
+  top: 50%;               
+  left: 50%;              
+  transform: translate(-50%, -50%);
+  margin-top: 50px;
+
+}
+.login-container2 h2 {
+  color: black;
+  margin-bottom: 10px;
+}
+.login-container2 input {
+  width: 300px;
+  height: 40px;
+  border-radius: 20px;
+  padding-left: 10px;
+  background-color:#E0E0E0;
+  color: black;
+  border: none;
+}
+.login-container2 button{
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #1E90FF;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.login-container2 button:hover{
+  background-color: #1C86EE;
+  transform: scale(1.05);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+.login-container3{
+  background-color: white;
+  width: 400px;
+  height: 350px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex; 
+  flex-direction: column; 
+  gap: 10px;
+  position: absolute;     
+  top: 50%;               
+  left: 50%;              
+  transform: translate(-50%, -50%);
+  margin-top: 20px;
+}
+.login-container3 h2{
+  margin-top: 40px;
+  color: black;
+  margin-bottom: 10px;
+}
+.login-container3 input{
+  width: 300px;
+  height: 40px;
+  border-radius: 20px;
+  padding-left: 10px;
+  background-color:#E0E0E0;
+  color: black;
+  border: none;
+  top:40px;
+}
+.login-container3 button{
+  margin-top: 30px;
+  width: 150px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.login-container3 button:hover{
+  background-color: green;
+  transform: scale(1.05);
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
